RESOLVED FIXED279589
[Debug] ASSERTION FAILED: !isSuspended() on `fast/css/view-transitions-zoom.html`
https://bugs.webkit.org/show_bug.cgi?id=279589
Summary [Debug] ASSERTION FAILED: !isSuspended() on `fast/css/view-transitions-zoom.h...
Vitaly Dyackhov
Reported 2024-09-12 03:05:30 PDT
Stack trace: ``` STDERR: ASSERTION FAILED: !isSuspended() STDERR: /app/webkit/Source/WebCore/bindings/js/JSDOMPromise.h(43) : JSC::JSPromise* WebCore::DOMPromise::promise() const STDERR: 1 0x7f20af6bcb98 WebCore::DOMPromise::promise() const STDERR: 2 0x7f20b1666edf WebCore::DOMPromise::status() const STDERR: 3 0x7f20b25435ad operator() STDERR: 4 0x7f20b255cbb0 __invoke_impl<void, WebCore::ViewTransition::skipViewTransition(WebCore::ExceptionOr<JSC::JSValue>&&)::<lambda()>&> STDERR: 5 0x7f20b25590b8 __invoke_r<void, WebCore::ViewTransition::skipViewTransition(WebCore::ExceptionOr<JSC::JSValue>&&)::<lambda()>&> STDERR: 6 0x7f20b2554fde _M_invoke STDERR: 7 0x7f20b167fa90 std::function<void ()>::operator()() const STDERR: 8 0x7f20b167f508 WTF::Detail::CallableWrapper<std::function<void ()>, void>::call() STDERR: 9 0x7f20ad567d99 WTF::Function<void ()>::operator()() const STDERR: 10 0x7f20b16667f8 operator() STDERR: 11 0x7f20b167f4e3 call STDERR: 12 0x7f209ed352fe WTF::Function<long (JSC::JSGlobalObject*, JSC::CallFrame*)>::operator()(JSC::JSGlobalObject*, JSC::CallFrame*) const STDERR: 13 0x7f209f594a43 runStdFunction STDERR: 14 0x7f1f0800c038 ??? ```
Attachments
Vitaly Dyackhov
Comment 1 2024-09-12 03:14:05 PDT
Radar WebKit Bug Importer
Comment 2 2024-09-19 03:06:13 PDT
EWS
Comment 3 2024-09-20 11:03:27 PDT
Committed 283996@main (9e7f7fec1b29): <https://commits.webkit.org/283996@main> Reviewed commits have been landed. Closing PR #33540 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.