[Debug] ASSERTION FAILED: !isSuspended() on `fast/css/view-transitions-zoom.html` https://bugs.webkit.org/show_bug.cgi?id=279589

Reviewed by Tim Nguyen.

Make sure that the script execution context is not stopped before
evaluating the status of the promise when it's settled.

* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::skipViewTransition):

Canonical link: https://commits.webkit.org/283996@main